Изменил параметры пакетов

--- a/YaCloudKit.TTS/YaCloudKit.TTS.csproj
+++ b/YaCloudKit.TTS/YaCloudKit.TTS.csproj
@@ -2,6 +2,9 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Description>Инструмент для работы с сервисом Yandex SpeechKit для синтеза речи</Description>
+    <Authors>Gennady Kurbesov</Authors>
+    <Version>0.1.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
