--- a/YaCloudKit.MQ/YaCloudKit.MQ.csproj
+++ b/YaCloudKit.MQ/YaCloudKit.MQ.csproj
@@ -2,6 +2,11 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Description>Инструмент для работы с очередью сообщений Yandex Cloud</Description>
+    <Authors>Gennady Kurbesov</Authors>
+    <AssemblyVersion>0.1.0.0</AssemblyVersion>
+    <FileVersion>0.1.0.0</FileVersion>
+    <Version>0.1.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
