--- a/YaCloudKit.IAM/YaCloudKit.IAM.csproj
+++ b/YaCloudKit.IAM/YaCloudKit.IAM.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\YaCloudKit\YaCloudKit.csproj" />
+    <ProjectReference Include="..\YaCloudKit\YaCloudKit.Core.csproj" />
   </ItemGroup>
 
   <ItemGroup>
