--- a/YaCloudKit.MQ/YaCloudKit.MQ.csproj
+++ b/YaCloudKit.MQ/YaCloudKit.MQ.csproj
@@ -15,7 +15,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\YaCloudKit\YaCloudKit.Core.csproj" />
+    <ProjectReference Include="..\YaCloudKit.Core\YaCloudKit.Core.csproj" />
   </ItemGroup>
 
   <ItemGroup>
