--- a/YaCloudKit.TTS/YaCloudKit.TTS.csproj
+++ b/YaCloudKit.TTS/YaCloudKit.TTS.csproj
@@ -12,7 +12,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\YaCloudKit\YaCloudKit.Core.csproj" />
+    <ProjectReference Include="..\YaCloudKit.Core\YaCloudKit.Core.csproj" />
   </ItemGroup>
 
 </Project>
