--- a/YaCloudKit.MQ/YaCloudKit.MQ.csproj
+++ b/YaCloudKit.MQ/YaCloudKit.MQ.csproj
@@ -15,14 +15,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\YaCloudKit.Core\YaCloudKit.Core.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
     <None Include="..\LICENSE">
       <Pack>True</Pack>
       <PackagePath></PackagePath>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="YaCloudKit.Core" Version="0.1.0" />
   </ItemGroup>
 
 </Project>
