--- a/YaCloudKit.IAM/YaCloudKit.IAM.csproj
+++ b/YaCloudKit.IAM/YaCloudKit.IAM.csproj
@@ -2,11 +2,26 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Version>0.1.0</Version>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
+    <PackageProjectUrl>https://github.com/gkurbesov/YaCloudKit</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/gkurbesov/YaCloudKit</RepositoryUrl>
+    <PackageTags>Яндекс, Облако, Yandex, Clound, IAM, Identity, Access, Management</PackageTags>
+    <Company>Gennady Kurbesov</Company>
+    <Authors>Gennady Kurbesov</Authors>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="YaCloudKit.Core" Version="0.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="../LICENSE">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
