--- a/YaCloudKit.Core/YaCloudKit.Core.csproj
+++ b/YaCloudKit.Core/YaCloudKit.Core.csproj
@@ -2,19 +2,26 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>0.1.0</Version>
+    <Version>0.1.1</Version>
     <Authors>Gennady Kurbesov</Authors>
     <Description>Базовая библиотека инструмента YaCloudKit для работы с сервисами Yandex.Cloud</Description>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <Copyright>Gennady Kurbesov</Copyright>
     <RepositoryUrl>https://github.com/gkurbesov/YaCloudKit</RepositoryUrl>
     <PackageProjectUrl>https://github.com/gkurbesov/YaCloudKit</PackageProjectUrl>
-    <PackageTags>Yandex, cloud, aws, message queue, http, client, rest</PackageTags>
+    <PackageTags>Яндекс, Облако, Yandex, cloud, aws, message queue, http, client, rest</PackageTags>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageIcon>icon-main.png</PackageIcon>
+    <AssemblyVersion>0.1.1.0</AssemblyVersion>
+    <FileVersion>0.1.1.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
     <None Include="../LICENSE">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
+    <None Include="..\Assets\icon-main.png">
       <Pack>True</Pack>
       <PackagePath></PackagePath>
     </None>
