--- a/YaCloudKit.TTS/YaCloudKit.TTS.csproj
+++ b/YaCloudKit.TTS/YaCloudKit.TTS.csproj
@@ -4,24 +4,29 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <Description>Инструмент YaCloudKit для работы с сервисом Yandex SpeechKit для синтеза речи</Description>
     <Authors>Gennady Kurbesov</Authors>
-    <Version>0.1.0</Version>
+    <Version>0.1.1</Version>
     <PackageProjectUrl>https://github.com/gkurbesov/YaCloudKit</PackageProjectUrl>
-    <PackageLicenseExpression>https://raw.githubusercontent.com/gkurbesov/YaCloudKit/master/LICENSE</PackageLicenseExpression>
+    <PackageLicenseExpression></PackageLicenseExpression>
     <RepositoryUrl>https://github.com/gkurbesov/YaCloudKit/tree/master/YaCloudKit.TTS</RepositoryUrl>
     <PackageTags>Яндекс, Облако, Yandex, Cloud, TTS, AI, Voice, Speech</PackageTags>
-    <PackageIcon>icon-main.png</PackageIcon>
+    <PackageIcon>logo-main.png</PackageIcon>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\YaCloudKit.Core\YaCloudKit.Core.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Include="..\Assets\icon-main.png">
+    <None Include="../LICENSE">
       <Pack>True</Pack>
       <PackagePath></PackagePath>
     </None>
+    <None Include="..\Assets\logo-main.png">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="YaCloudKit.Core" Version="0.1.1" />
   </ItemGroup>
 
 </Project>
