--- a/YaCloudKit.MQ.Transport/YaCloudKit.MQ.Transport.csproj
+++ b/YaCloudKit.MQ.Transport/YaCloudKit.MQ.Transport.csproj
@@ -6,10 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\YaCloudKit.MQ\YaCloudKit.MQ.csproj" />
+    <PackageReference Include="YaCloudKit.MQ" Version="0.1.1" />
   </ItemGroup>
 
 </Project>
