--- a/YaCloudKit.MQ.Transport/YaCloudKit.MQ.Transport.csproj
+++ b/YaCloudKit.MQ.Transport/YaCloudKit.MQ.Transport.csproj
@@ -2,11 +2,28 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Version>0.1.0</Version>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
+    <PackageProjectUrl>https://github.com/gkurbesov/YaCloudKit</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/gkurbesov/YaCloudKit</RepositoryUrl>
+    <PackageTags>Яндекс, Облако, Yandex, Cloud, Message, Queue, kit, aws</PackageTags>
+    <PackageIcon>logo-main.png</PackageIcon>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="YaCloudKit.MQ" Version="0.1.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="../LICENSE">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
+    <None Include="..\Assets\logo-main.png">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
