--- a/src/YaCloudKit.Core/YaCloudKit.Core.csproj
+++ b/src/YaCloudKit.Core/YaCloudKit.Core.csproj
@@ -21,6 +21,10 @@
       <Pack>True</Pack>
       <PackagePath></PackagePath>
     </None>
+    <None Include="..\..\LICENSE">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
