--- a/src/YaCloudKit.MQ.Transport/YaCloudKit.MQ.Transport.csproj
+++ b/src/YaCloudKit.MQ.Transport/YaCloudKit.MQ.Transport.csproj
@@ -2,28 +2,28 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>0.1.1</Version>
+    <Version>0.1.2</Version>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <PackageProjectUrl>https://github.com/gkurbesov/YaCloudKit</PackageProjectUrl>
     <RepositoryUrl>https://github.com/gkurbesov/YaCloudKit</RepositoryUrl>
     <PackageTags>Яндекс, Облако, Yandex, Cloud, Message, Queue, kit, aws</PackageTags>
     <PackageIcon>logo-main.png</PackageIcon>
-    <AssemblyVersion>0.1.1.0</AssemblyVersion>
-    <FileVersion>0.1.1.0</FileVersion>
+    <AssemblyVersion>0.1.2.0</AssemblyVersion>
+    <FileVersion>0.1.2.0</FileVersion>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-    <PackageReference Include="YaCloudKit.MQ" Version="0.2.1" />
+    <PackageReference Include="YaCloudKit.MQ" Version="0.2.2" />
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="../LICENSE">
+    <None Include="..\..\Assets\logo-main.png">
       <Pack>True</Pack>
       <PackagePath></PackagePath>
     </None>
-    <None Include="..\Assets\logo-main.png">
+    <None Include="..\..\LICENSE">
       <Pack>True</Pack>
       <PackagePath></PackagePath>
     </None>
