--- a/src/YaCloudKit.MQ/YaCloudKit.MQ.csproj
+++ b/src/YaCloudKit.MQ/YaCloudKit.MQ.csproj
@@ -1,7 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFrameworks>netstandard2.0;net6.0</TargetFrameworks>
+    <LangVersion>latest</LangVersion>
     <Description>Инструмент YaCloudKit для работы с очередью сообщений Yandex Cloud</Description>
     <Authors>Gennady Kurbesov</Authors>
     <AssemblyVersion>0.2.2.0</AssemblyVersion>
@@ -15,10 +16,6 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageIcon>logo-main.png</PackageIcon>
   </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="YaCloudKit.Core" Version="0.1.2" />
-  </ItemGroup>
 
   <ItemGroup>
     <None Include="..\..\Assets\logo-main.png">
