Видимость для тестовой сборки

--- a/src/MessageQueue/YaCloudKit.MQ/YaCloudKit.MQ.csproj
+++ b/src/MessageQueue/YaCloudKit.MQ/YaCloudKit.MQ.csproj
@@ -16,6 +16,10 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageIcon>logo-main.png</PackageIcon>
   </PropertyGroup>
+	
+  <ItemGroup>
+    <InternalsVisibleTo Include="$(AssemblyName).Tests" />
+  </ItemGroup>
 
   <ItemGroup>
     <None Include="..\..\..\Assets\logo-main.png">
