--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,10 +18,10 @@ jobs:
           dotnet-version: 6.0.x
 
       - name: Install dependencies
-        run: dotnet restore
+        run: dotnet restore ./src/YaCloudKit.sln
 
       - name: Build
         run: dotnet build ./src/YaCloudKit.sln --configuration Release --no-restore /warnaserror
 
       - name: Test
-        run: dotnet test --configuration Release --no-restore
+        run: dotnet test ./src/YaCloudKit.sln --configuration Release --no-restore
