--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,7 +21,7 @@ jobs:
         run: dotnet restore ./src/YaCloudKit.sln
 
       - name: Build
-        run: dotnet build ./src/YaCloudKit.sln --configuration Release --no-restore /warnaserror
+        run: dotnet build ./src/YaCloudKit.sln --configuration Release --no-restore
 
       - name: Test
         run: dotnet test ./src/YaCloudKit.sln --configuration Release --no-restore
