--- a/src/MessageQueue/YaCloudKit.MQ/YaCloudKit.MQ.csproj
+++ b/src/MessageQueue/YaCloudKit.MQ/YaCloudKit.MQ.csproj
@@ -5,9 +5,6 @@
     <LangVersion>latest</LangVersion>
     <Description>Инструмент YaCloudKit для работы с очередью сообщений Yandex Cloud</Description>
     <Authors>Gennady Kurbesov</Authors>
-    <AssemblyVersion>0.2.3.0</AssemblyVersion>
-    <FileVersion>0.2.3.0</FileVersion>
-    <Version>0.2.3</Version>
     <PackageLicenseExpression></PackageLicenseExpression>
     <PackageProjectUrl>https://github.com/gkurbesov/YaCloudKit</PackageProjectUrl>
     <RepositoryUrl>https://github.com/gkurbesov/YaCloudKit/tree/master/YaCloudKit.MQ</RepositoryUrl>
@@ -15,6 +12,14 @@
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageIcon>logo-main.png</PackageIcon>
+    <VersionMajor>0</VersionMajor>
+    <VersionMinor>3</VersionMinor>
+    <BuildNumber>$(BuildNumber)</BuildNumber>
+    <BuildNumber Condition="'$(BuildNumber)' == ''">0</BuildNumber>
+    <PackageVersion>$(VersionMajor).$(VersionMinor).$(BuildNumber)$(VersionTag)</PackageVersion>
+    <AssemblyVersion>$(VersionMajor).$(VersionMinor).$(BuildNumber)$(VersionTag)</AssemblyVersion>
+    <FileVersion>$(VersionMajor).$(VersionMinor).$(BuildNumber)$(VersionTag)</FileVersion>
+    <Version>$(VersionMajor).$(VersionMinor).$(BuildNumber)$(VersionTag)</Version>
   </PropertyGroup>
 	
   <ItemGroup>
