--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,3 +25,9 @@ jobs:
 
       - name: Test
         run: dotnet test ./src/YaCloudKit.sln --configuration Release --no-restore
+
+      - name: Pack
+        run: dotnet pack ./src/YaCloudKit.sln -c Release -p:BuildNumber=${{ github.run_number }}
+
+      - name: Publish YaCloudKit.MQ
+        run: dotnet nuget push **/YaCloudKit.MQ.nupkg -k ${{secrets.NUGET_TOKEN}} -s https://api.nuget.org/v3/index.json
