--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -30,4 +30,4 @@ jobs:
         run: dotnet pack ./src/YaCloudKit.sln -c Release -p:BuildNumber=${{ github.run_number }}
 
       - name: Publish YaCloudKit.MQ
-        run: dotnet nuget push **/YaCloudKit.MQ.nupkg -k ${{secrets.NUGET_TOKEN}} -s https://api.nuget.org/v3/index.json
+        run: dotnet nuget push **/YaCloudKit.MQ.*.nupkg -k ${{secrets.NUGET_TOKEN}} -s https://api.nuget.org/v3/index.json
