--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -26,8 +26,8 @@ jobs:
       - name: Test
         run: dotnet test ./src/YaCloudKit.sln --configuration Release --no-restore
 
-      - name: Pack
-        run: dotnet pack ./src/YaCloudKit.sln -c Release -p:BuildNumber=${{ github.run_number }}
+      - name: Pack YaCloudKit.MQ
+        run: dotnet pack ./src/MessageQueue/YaCloudKit.MQ/YaCloudKit.MQ.csproj -c Release -p:BuildNumber=${{ github.run_number }}
 
       - name: Publish YaCloudKit.MQ
-        run: dotnet nuget push **/YaCloudKit.MQ.*.nupkg -k ${{secrets.NUGET_TOKEN}} -s https://api.nuget.org/v3/index.json
+        run: dotnet nuget push **MessageQueue/YaCloudKit.MQ/YaCloudKit.MQ.*.nupkg -k ${{secrets.NUGET_TOKEN}} -s https://api.nuget.org/v3/index.json
