Написал тесты для методов RequestParametersHelper

--- a/src/TextToSpeech/YaCloudKit.TTS.Tests/YaCloudKit.TTS.Tests.csproj
+++ b/src/TextToSpeech/YaCloudKit.TTS.Tests/YaCloudKit.TTS.Tests.csproj
@@ -22,7 +22,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\YaCloudKit.MQ\YaCloudKit.MQ.csproj" />
+        <ProjectReference Include="..\YaCloudKit.TTS\YaCloudKit.TTS.csproj" />
     </ItemGroup>
 
 </Project>
