--- a/src/MessageQueue/YaCloudKit.MQ.Tests/YaCloudKit.MQ.Tests.csproj
+++ b/src/MessageQueue/YaCloudKit.MQ.Tests/YaCloudKit.MQ.Tests.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
@@ -21,6 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\YaCloudKit.MQ.Extensions.DependencyInjection\YaCloudKit.MQ.Extensions.DependencyInjection.csproj" />
     <ProjectReference Include="..\YaCloudKit.MQ\YaCloudKit.MQ.csproj" />
   </ItemGroup>
 
