Добавил тесты на транспорт

--- a/src/MessageQueue/YaCloudKit.MQ.Transport/YaCloudKit.MQ.Transport.csproj
+++ b/src/MessageQueue/YaCloudKit.MQ.Transport/YaCloudKit.MQ.Transport.csproj
@@ -23,6 +23,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <InternalsVisibleTo Include="$(AssemblyName).Tests" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Include="..\..\..\Assets\logo-main.png">
       <Pack>True</Pack>
       <PackagePath></PackagePath>
