--- a/src/MessageQueue/YaCloudKit.MQ.Transport/YaCloudKit.MQ.Transport.csproj
+++ b/src/MessageQueue/YaCloudKit.MQ.Transport/YaCloudKit.MQ.Transport.csproj
@@ -13,9 +13,8 @@
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
     <PackageIcon>logo-main.png</PackageIcon>
     <VersionMajor>0</VersionMajor>
-    <VersionMinor>7</VersionMinor>
-    <BuildNumber>$(BuildNumber)</BuildNumber>
-    <BuildNumber Condition="'$(BuildNumber)' == ''">0</BuildNumber>
+    <VersionMinor>8</VersionMinor>
+    <BuildNumber>0</BuildNumber>
     <PackageVersion>$(VersionMajor).$(VersionMinor).$(BuildNumber)$(VersionTag)</PackageVersion>
     <AssemblyVersion>$(VersionMajor).$(VersionMinor).$(BuildNumber)$(VersionTag)</AssemblyVersion>
     <FileVersion>$(VersionMajor).$(VersionMinor).$(BuildNumber)$(VersionTag)</FileVersion>
