--- a/src/TextToSpeech/YaCloudKit.TTS/YaCloudKit.TTS.csproj
+++ b/src/TextToSpeech/YaCloudKit.TTS/YaCloudKit.TTS.csproj
@@ -13,8 +13,7 @@
     <PackageIcon>logo-main.png</PackageIcon>
     <VersionMajor>0</VersionMajor>
     <VersionMinor>3</VersionMinor>
-    <BuildNumber>$(BuildNumber)</BuildNumber>
-    <BuildNumber Condition="'$(BuildNumber)' == ''">0</BuildNumber>
+    <BuildNumber>0</BuildNumber>
     <PackageVersion>$(VersionMajor).$(VersionMinor).$(BuildNumber)$(VersionTag)</PackageVersion>
     <AssemblyVersion>$(VersionMajor).$(VersionMinor).$(BuildNumber)$(VersionTag)</AssemblyVersion>
     <FileVersion>$(VersionMajor).$(VersionMinor).$(BuildNumber)$(VersionTag)</FileVersion>
