--- a/src/MessageQueue/YaCloudKit.MQ.Transport.Extensions.DependencyInjection/YaCloudKit.MQ.Transport.Extensions.DependencyInjection.csproj
+++ b/src/MessageQueue/YaCloudKit.MQ.Transport.Extensions.DependencyInjection/YaCloudKit.MQ.Transport.Extensions.DependencyInjection.csproj
@@ -3,7 +3,7 @@
     <PropertyGroup>
         <TargetFrameworks>netstandard2.0;net6.0</TargetFrameworks>
         <LangVersion>latest</LangVersion>
-        <Description>Реализация методов регистраици зависимостей для YaCloudKit.MQ</Description>
+        <Description>Реализация методов регистраици зависимостей для YaCloudKit.MQ.Transport</Description>
         <Authors>Gennady Kurbesov</Authors>
         <PackageProjectUrl>https://github.com/gkurbesov/YaCloudKit</PackageProjectUrl>
         <RepositoryUrl>https://github.com/gkurbesov/YaCloudKit</RepositoryUrl>
@@ -21,12 +21,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
-      <PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0" />
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\YaCloudKit.MQ\YaCloudKit.MQ.csproj" />
+        <ProjectReference Include="..\YaCloudKit.MQ.Transport\YaCloudKit.MQ.Transport.csproj" />
     </ItemGroup>
 
     <ItemGroup>
