--- a/src/TextToSpeech/YaCloudKit.TTS.DependencyInjection/YaCloudKit.TTS.DependencyInjection.csproj
+++ b/src/TextToSpeech/YaCloudKit.TTS.DependencyInjection/YaCloudKit.TTS.DependencyInjection.csproj
@@ -30,7 +30,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <None Include="..\..\..\Assets\logo-main.png">
+        <None Include="..\..\..\assetslogo-main.png">
             <Pack>True</Pack>
             <PackagePath></PackagePath>
         </None>
