--- a/src/MessageQueue/YaCloudKit.MQ.Transport/YaCloudKit.MQ.Transport.csproj
+++ b/src/MessageQueue/YaCloudKit.MQ.Transport/YaCloudKit.MQ.Transport.csproj
@@ -26,7 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="..\..\..\assetslogo-main.png">
+    <None Include="..\..\..\assets\logo-main.png">
       <Pack>True</Pack>
       <PackagePath></PackagePath>
     </None>
