--- a/src/MessageQueue/YaCloudKit.MQ/YaCloudKit.MQ.csproj
+++ b/src/MessageQueue/YaCloudKit.MQ/YaCloudKit.MQ.csproj
@@ -25,7 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="..\..\..\assetslogo-main.png">
+    <None Include="..\..\..\assets\logo-main.png">
       <Pack>True</Pack>
       <PackagePath></PackagePath>
     </None>
