--- a/samples/YaCloudKit.MQ.Examples/YaCloudKit.MQ.Examples.csproj
+++ b/samples/YaCloudKit.MQ.Examples/YaCloudKit.MQ.Examples.csproj
@@ -2,14 +2,14 @@
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <TargetFramework>net6.0</TargetFramework>
+        <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <IsPackable>false</IsPackable>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="YaCloudKit.MQ" Version="0.8.0" />
+      <ProjectReference Include="..\..\src\MessageQueue\YaCloudKit.MQ\YaCloudKit.MQ.csproj" />
     </ItemGroup>
 
 </Project>
