--- a/samples/YaCloudKit.MQ.Transport.Examples/YaCloudKit.MQ.Transport.Examples.csproj
+++ b/samples/YaCloudKit.MQ.Transport.Examples/YaCloudKit.MQ.Transport.Examples.csproj
@@ -2,18 +2,19 @@
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <TargetFramework>net6.0</TargetFramework>
+        <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <IsPackable>false</IsPackable>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
-      <PackageReference Include="YaCloudKit.MQ" Version="0.8.0" />
-      <PackageReference Include="YaCloudKit.MQ.Extensions.DependencyInjection" Version="0.8.0" />
-      <PackageReference Include="YaCloudKit.MQ.Transport" Version="0.8.0" />
-      <PackageReference Include="YaCloudKit.MQ.Transport.Extensions.DependencyInjection" Version="0.8.0" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.1" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\..\src\MessageQueue\YaCloudKit.MQ.Transport\YaCloudKit.MQ.Transport.csproj" />
+      <ProjectReference Include="..\..\src\MessageQueue\YaCloudKit.MQ\YaCloudKit.MQ.csproj" />
     </ItemGroup>
 
 </Project>
