--- a/src/CertificateManager/YaCloudKit.CertificateManager/YaCloudKit.CertificateManager.csproj
+++ b/src/CertificateManager/YaCloudKit.CertificateManager/YaCloudKit.CertificateManager.csproj
@@ -30,4 +30,20 @@
     </ItemGroup>
 
 
+    <ItemGroup>
+        <InternalsVisibleTo Include="$(AssemblyName).Tests" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <None Include="..\..\..\assets\logo-main.png">
+            <Pack>True</Pack>
+            <PackagePath></PackagePath>
+        </None>
+        <None Include="..\..\..\LICENSE">
+            <Pack>True</Pack>
+            <PackagePath></PackagePath>
+        </None>
+    </ItemGroup>
+
+
 </Project>
